--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.14.14",
+    "nedb-promises": "^4.1.0",
     "nodemon": "^2.0.6",
     "typescript": "^4.1.3"
   }
