--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:ts": "tsc --watch",
     "dev:node": "nodemon --watch dist dist/main.js",
     "build:ts": "tsc",
-    "build:run": "tsc ; node ./dist/main.js"
+    "build:run": "tsc ; node ./dist/main.js",
+    "repl": "npm run build:ts ; node --experimental-repl-await ./dist/repl/index"
   },
   "keywords": [],
   "author": "",
