--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cheerio": "^0.22.23",
     "@types/node": "^14.14.14",
+    "cheerio": "^1.0.0-rc.5",
     "nedb-promises": "^4.1.0",
     "nodemon": "^2.0.6",
     "typescript": "^4.1.3"
